--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /* General Styling */
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #F8ECE1;
-    color: #4a00ff;
+    background-color: #EDDFD8; /* Updated pink background */
+    color: #4922F4; /* Updated blue font */
     text-align: center;
     margin: 0;
     padding: 0;
@@ -15,12 +15,12 @@ body {
     margin: auto;
     font-size: 26px;
     font-weight: bold;
-    color: #4a00ff;
+    color: #4922F4; /* Updated blue font */
 }
 
 /* Styling for Links */
 a {
-    color: #4a00ff;
+    color: #4922F4; /* Updated blue font */
     text-decoration: none;
     font-weight: bold;
 }
